Fixed an IE layout bug

--- a/deploy/cheesefork.css
+++ b/deploy/cheesefork.css
@@ -88,6 +88,11 @@
     float: left;
 }
 
+/* bootstrap4-dialog - make the filter footer text align to the right */
+.bootstrap-dialog .modal-footer {
+    justify-content: space-between;
+}
+
 /* bootstrap4-dialog - add spacing between buttons */
 .bootstrap-dialog .bootstrap-dialog-footer-buttons .btn {
     margin-right: .5rem;
